fixed many issues!
most problems had to do with grid functionality. i learned that as long as elements are within your grid container, you can apply grid child properties to them, even if those elements appear above the container declaration in the stylesheet

--- a/css/style.css
+++ b/css/style.css
@@ -53,11 +53,6 @@ nav a:hover{
   margin-top: 0px;
   border: 2px solid #000;
 }
- 
-
-/*Your code here*/
-/*Add the selector and code to put a 2px black 
-border around all elements in focus.*/
   
 
 footer{
@@ -69,22 +64,7 @@ footer{
   text-align: center;
 }
 
-nav{
-  display: grid;
-  background-color: #ddd;
-  padding: 20px 0; 
-  text-align: left;
-  grid-column: 1 / span all;
-  /* grid-column: 1 / -1; keeps nav centered */
-  grid-row: 1 / 1;
-
-  /*Your code here*/
-  /*Span the top row*/
-
-}
-
 header{
-  display: grid;
   background: url("../images/header.jpg");
   background-attachment: fixed; /* Parallax effect */     
   background-position: center;  /* Parallax effect */
@@ -92,8 +72,10 @@ header{
   background-size: cover;       /* Parallax effect */
   color: #fff;
   height: 400px;                /* Parallax effect */
-  grid-column: 1 / span all;
-  grid-row: 2 / 1;
+  grid-column: 1 / -1;
+  grid-row: 2 / span 1;
+  text-align: center;
+  overflow: hidden;
 
   /* Your code here */
   /* Set background-image to header.jpg in the images folder */
@@ -107,63 +89,78 @@ header p{
   text-align: center;
 }
 
+nav{
+  background-color: #ddd;
+  padding: 20px 0; 
+  text-align: left;
+  grid-column: 1 / -1;
+  /* grid-column: 1 / -1; keeps nav centered */
+  grid-row: 1 / 1;
+
+  /*Your code here*/
+  /*Span the top row*/
+
+}
 
 .container{
   display: grid;
   grid-template-columns: 100px 400px 100px;
   grid-template-rows: 30px auto auto auto auto auto 100px;
   grid-row-gap: 15px;
+  /*this is the PARENT of our grid!!!*/
+  /*other elements are CHILDREN (but where do the children go?)*/
   /*Your code here  */
   /* See documentation for mobile view */
-
+  /*use overflow: hidden; somewhere!!!!*/
 }
+
 .about, .method, .clients, .contact{
-  grid-column: 2 / 1;
-  grid-row: 3 4 5 6 / 1;
+  grid-column: 2 / span 1;
   /*Your code here */
   /* See documentation for mobile view */
 
 }
 
 .about-image, .method-image, .clients-image, .contact-image{
-  grid-column: 1 / span all;
+  overflow: hidden;
+  grid-column: 1 / -1;
+  /*1fr might be the move?*/
   max-height: 700px;
-  grid-row: 3 4 5 6 / 1;
    /*Your code here */
    /* See documentation for mobile view */
 }
 
 .about, .about-image{
-  grid-column: 1 / span all;
+  grid-column: 1 / -1;
+  grid-row: 3 / span 1;
   max-height: 700px;
-  grid-row: 3 / 1;
   /*Your code here */
   /* See documentation for mobile view */
 
 }
 
 .method, .method-image{
-  grid-column: 1 / span all;
+  grid-column: 1 / -1;
+  grid-row: 4 / span 1;
   max-height: 700px;
-  grid-row: 4 / 1;
   /*Your code here */
   /* See documentation for mobile view */
 }
 
 
 .clients, .clients-image{
-  grid-column: 1 / span all;
+  grid-column: 1 / -1;
+  grid-row: 5 / span 1;
   max-height: 700px;
-  grid-row: 5 / 1;
   /*Your code here */
   /* See documentation for mobile view */
 }
 
 
 .contact, .contact-image{
-  grid-column: 1 / span all;
+  grid-column: 1 / -1;
+  grid-row: 6 / span 1;
   max-height: 700px;
-  grid-row: 6 / 1;
   /*Your code here */
   /* See documentation for mobile view */
 }
@@ -173,18 +170,21 @@ header p{
   border: 10px solid #000;
   padding: 30px;
   position: relative;
-  align-items: center;
+  align-self: center;
+  justify-self: center;
+  /*justify-self: (this changes row axis)*/
+  /*align-self: (this changes column axis) */
   /*text isn't finding dead center. still anochored to left of browser.*/
   /*Your code here:*/
   /*Align the content in the center */
 
 }
 
-
-
 @media all and (min-width: 800px){
 
   .container{
+    grid-template-columns: 50px auto 500px auto 50px;
+    grid-template-rows: 70px 400px 400px 400px 400px 400px 100px;
   /*Your code here */
   /* See documentation for desktop view */ 
   }
@@ -197,11 +197,14 @@ header p{
   }
 
   .about, .clients, .method-image, .contact-image{
+    grid-column: 3 / span 2;
+
   /*Your code here */
   /* See documentation for desktop view */ 
   }
 
   .about-image, .clients-image, .method, .contact{
+    grid-column: 2 / span 2;
     /*Your code here */
     /* See documentation for desktop view */ 
     }
